--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">The Name Quiz App</string>
     <string name="anders">Anders Mælhum</string>
+    <string name="add_new_person">Add new person</string>
+    <string name="question_list">Question List</string>
+    <string name="add">Add</string>
+    <string name="enter_your_name">Enter your name</string>
 </resources>
