--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="add_button">add</string>
     <string name="question_list">Question List</string>
     <string name="result">Result</string>
-    <string name="correct_answers">correct answers</string>
+    <string name="correct_answers">correct answer(s)</string>
 </resources>
